[package]
name = "engine"
version = "0.1.0"
authors = ["Jin Pan <jinxp1@gmail.com>"]
edition = "2018"
description = "Simulating the spread of COVID-19 on a virtual society"
repository = "https://github.com/jinpan/covid-simulations"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
approx = "0.3"
itertools = "0.9"
rand = { version = "0.7", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"