[package]
name = "engine"
version = "0.1.0"
authors = ["Jin Pan <jinxp1@gmail.com>"]
edition = "2018"
description = "Simulating the spread of COVID-19 on a virtual society"
repository = "https://github.com/jinpan/covid-simulations"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Reference https://doc.rust-lang.org/reference/linkage.html.
crate-type = ["cdylib", "lib"]

[[bench]]
name = "v0_benchmark"
harness = false

[dev-dependencies]
criterion = "0.3"
counter = "0.4"

[dependencies]
anyhow = "1.0"
approx = "0.3"
itertools = "0.9"
rand = { version = "0.7", features = ["wasm-bindgen"] }
rand_core = "0.5"
rand_chacha = "0.2"
serde = "1.0"
serde_derive = "1.0"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"] }
