[package]
name = "engine"
version = "0.1.0"
authors = ["Jin Pan <jinxp1@gmail.com>"]
edition = "2018"
description = "Simulating the spread of COVID-19 on a virtual society"
repository = "https://github.com/jinpan/covid-simulations"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Reference https://doc.rust-lang.org/reference/linkage.html.
crate-type = ["cdylib", "lib"]

[[bench]]
name = "v0_benchmark"
harness = false

[[bin]]
name = "parameter_calibration"
path = "src/parameter_calibration/bin/main.rs"

[profile.release]
lto = true

[dev-dependencies]
criterion = "0.3"
cpuprofiler = "0.0.4"
counter = "0.4"

[dependencies]
anyhow = "1.0"
approx = "0.3"
clap = "2"
itertools = "0.9"
js-sys = "0.3"
pathfinding = "2.0.4"
rand = { version = "0.7", features = ["wasm-bindgen"] }
rand_chacha = "0.2"
rand_core = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"] }
